# insight

./: .env  .env.example  .env.sample  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  init.sql  package-lock.json  package.json  playwright.config.ts
database/: init.sql
database/include/: auth.sql  file.sql  functions.sql  pagestream.sql  tables.sql  triggers.sql  views.sql
database/model/: file.sql  pagestream.sql  prompt.sql
debezium/: application.properties
docker/: init.sql
docker/minio/: external_user.json  internal_worker.json
docker/rabbitmq/: rabbitmq.conf
e2e/: example.spec.ts  files.spec.ts
ingest/: Dockerfile  Makefile  README.md  pyproject.toml
ingest/ingest/: __init__.py  models.py  plugin.py
ingest/insight_ingest/: __init__.py  models.py  plugin.py
keycloak/: client-insight.json  client-rabbitmq.json  init.sh  realm-insight.json  role-insight-default.json  scope-insight-roles.json
migrations/: 000002_files.up.sql  000003_documents.up.sql  000004_prompts.up.sql
minio/: external_user.json  internal_worker.json  mc.sh
nginx/: default.conf.template  nginx.conf
opensearch/: Dockerfile  opensearch.yml
playwright/: fixtures.ts  index.ts  oidc.ts
postgres/: Dockerfile  README.md  requirements.txt
rabbitmq/: definitions.json  enabled_plugins  rabbitmq.conf
templates/: default.conf.template
tests/: conversation_detail.spec.ts  documents.spec.ts  example.spec.ts  file_detail.spec.ts  file_edit.spec.ts  file_index.spec.ts  files.spec.ts  folder_detail.spec.ts  uploads.spec.ts
tests/conversation/: detail.spec.ts
(+13 files in other folders)
