[tool.poetry]
name = "ingest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
asyncio = "^3.4.3"
click = "^8.1.7"

[tool.poetry.scripts]
insight-ingest = "ingest:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
