[tool.poetry]
name = "ingest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
asyncio = "^3.4.3"
click = "^8.1.7"
ocrmypdf = "^15.4.0"
pikepdf = "^8.6.0"

[tool.poetry.scripts]
insight-ingest = "ingest:cli"

[tool.poetry.group.dev.dependencies]
sqlacodegen = {version = "^3.0.0rc3", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
